Fixed section spacing

--- a/app/styles/templates/_index.scss
+++ b/app/styles/templates/_index.scss
@@ -14,7 +14,9 @@ section {
 	padding-top: $gutter-width * 3;
 	padding-bottom: $gutter-width * 3;
 
-	h2 {
+	.section-header {
+		background-color: $default-background-color;
+		clear: both;
 		margin: 0 0 $gutter-width;
 		padding: 0.3em 0.5em 0.1em;
 	}
